# cotador

./: main.py  pyproject.toml
cotador/kv/: cotador.kv
