[tool.poetry]
name = "cotador"
version = "0.1.0"
description = ""
authors = ["felipec <felipecmelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]
blue = "^0.8.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
